--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   </head>
   <body>
     <header>
-        <img src="./images/spotify-logo.png" alt="spotify-logo">
-      <div>
+        <img class="head-logo" src="./images/spotify-logo.png" alt="spotify-logo">
+      <nav>
         <ul>
-          <li><a href="#">Premium</a></li>
-          <li><a href="#">Discover</a></li>
-          <li><a href="#">Help</a></li>
-          <li><a href="#">Download</a></li>
+          <li><a class="nav-bar-item" href="#">Premium</a></li>
+          <li><a class="nav-bar-item" href="#">Discover</a></li>
+          <li><a class="nav-bar-item" href="#">Help</a></li>
+          <li><a class="nav-bar-item" href="#">Download</a></li>
         </ul>
-      </div>
+      </nav>
     </header>
     <div class="container">
       <section class="section1">
@@ -28,27 +28,27 @@
       
       <section class="section2">
         <h2>What’s on Spotify?</h2>
-        <div>
+        <div class="article-row">
           <article>
-            <img src="./images/music-icon.png" alt="speacker image">
+            <img class="icon" src="./images/music-icon.png" alt="speacker image">
             <h3>Millions of Songs</h3>
             <p>There are millions of songs on Spotify</p>
           </article>
-          <article>
-            <img src="./images/high-quality-icon.png" alt="sound frequence image">
+          <article class="article-sound">
+            <img class="icon" src="./images/high-quality-icon.png" alt="sound frequence image">
             <h3>HD Music</h3>
             <p>Listen to music as if you were listening live</p>
             </article>
           <article>
-            <img src="./images/devices-icon.png" alt="smartphone icon">
+            <img class="icon" src="./images/devices-icon.png" alt="smartphone icon">
             <h3>Stream Everywhere</h3>
             <p>Stream music on your smartphone, tablet or computer</p></article>
         </div>
       </section>
       
       <section class="section3">
-        <h2>It’s as yeezy as Kanye West.</h2>
         <div>
+          <h2>It’s as yeezy as Kanye West.</h2>
           <article>
             <h3>Search</h3>
             <p>Know what you want to listen to? Just search and hit play.</p>
@@ -62,8 +62,8 @@
             <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>      
           </article>
         </div>
-        <img src="" alt="">
-        <img src="" alt="">
+        <img class="spotify" src="./images/spotify-icon-white.png" alt="spotify icon spotify-icon-white">
+        <img class="keyne" src="./images/spotify-app.jpg" alt="spotify-app-image">
       </section>
     </div>
   </body>
